correcting an error

--- a/BIG_DATA/notebook/Janudi/preprocessing.ipynb
+++ b/BIG_DATA/notebook/Janudi/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "00713ef5",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "26e9a4c1",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "e250ce46",
    "metadata": {},
    "outputs": [
@@ -75,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "0a6ccfd3",
    "metadata": {},
    "outputs": [],
@@ -87,32 +81,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "43565cdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert categorical\n",
+    "# 2. Convert categorical first + fix missing\n",
     "cat_cols = ['Film_Name', 'Category', 'Language']\n",
     "for col in cat_cols:\n",
-    "    df[col] = df[col].astype('category')\n"
+    "    df[col] = df[col].astype(\"category\")\n",
+    "    df[col] = df[col].cat.add_categories([\"Unknown\"])\n",
+    "    df[col] = df[col].fillna(\"Unknown\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "988c523f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert dates\n",
-    "df['Release_Date'] = pd.to_datetime(df['Release_Date'], errors='coerce')\n",
-    "df['Viewing_Month'] = pd.to_datetime(df['Viewing_Month'], format='%Y-%m', errors='coerce')"
+    "# 4. Convert dates\n",
+    "df['Viewing_Month'] = pd.to_datetime(df['Viewing_Month'], format='%Y-%m-%d')\n",
+    "df['view_year'] = df['Viewing_Month'].dt.year\n",
+    "df['view_month'] = df['Viewing_Month'].dt.month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "65e58c49",
    "metadata": {},
    "outputs": [
@@ -128,20 +125,20 @@
       " #   Column             Non-Null Count  Dtype         \n",
       "---  ------             --------------  -----         \n",
       " 0   Film_Name          460 non-null    category      \n",
-      " 1   Release_Date       460 non-null    datetime64[ns]\n",
+      " 1   Release_Date       460 non-null    object        \n",
       " 2   Category           460 non-null    category      \n",
       " 3   Language           460 non-null    category      \n",
       " 4   Viewer_Rate        460 non-null    float64       \n",
       " 5   Number_of_Views    460 non-null    int64         \n",
-      " 6   Viewing_Month      0 non-null      datetime64[ns]\n",
+      " 6   Viewing_Month      460 non-null    datetime64[ns]\n",
       " 7   Release_Year       460 non-null    int64         \n",
       " 8   Release_Month      460 non-null    int64         \n",
       " 9   Viewing_Year       460 non-null    int64         \n",
       " 10  Viewing_Month_Num  460 non-null    int64         \n",
-      " 11  view_year          0 non-null      float64       \n",
-      " 12  view_month         0 non-null      float64       \n",
-      "dtypes: category(3), datetime64[ns](2), float64(3), int64(5)\n",
-      "memory usage: 39.3 KB\n",
+      " 11  view_year          460 non-null    int32         \n",
+      " 12  view_month         460 non-null    int32         \n",
+      "dtypes: category(3), datetime64[ns](1), float64(1), int32(2), int64(5), object(1)\n",
+      "memory usage: 36.1+ KB\n",
       "None\n"
      ]
     }
@@ -160,14 +157,13 @@
    "id": "9a37466a",
    "metadata": {},
    "source": [
-    "# -------------------------------------------------\n",
-    "# 3. CLEAN DATA\n",
-    "# -------------------------------------------------"
+    "\n",
+    " CLEAN DATA\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "4b429ce0",
    "metadata": {},
    "outputs": [],
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "id": "af06c985",
    "metadata": {},
    "outputs": [],
@@ -190,20 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "731141a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill missing categorical values by first adding \"Unknown\" to each category\n",
-    "for col in cat_cols:\n",
-    "    df[col] = df[col].cat.add_categories([\"Unknown\"])\n",
-    "    df[col] = df[col].fillna(\"Unknown\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "3497f334",
    "metadata": {},
    "outputs": [],
@@ -214,36 +197,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55ed141",
+   "id": "b172b39e",
    "metadata": {},
    "source": [
-    "FILTER DECEMBER 2025 & REMOVE 2026 DATA\n"
+    "REMOVE 2026 DATA FIRST"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0d310412",
+   "execution_count": 43,
+   "id": "fa85a437",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "DATA ONLY FOR DECEMBER 2025:\n",
-      "Empty DataFrame\n",
-      "Columns: [Film_Name, Release_Date, Category, Language, Viewer_Rate, Number_of_Views, Viewing_Month, Release_Year, Release_Month, Viewing_Year, Viewing_Month_Num, view_year, view_month]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_dec2025 = df[(df['view_year'] == 2025) & (df['view_month'] == 12)]\n",
-    "df = df[df['view_year'] != 2026]\n",
-    "\n",
-    "print(\"\\nDATA ONLY FOR DECEMBER 2025:\")\n",
-    "print(df_dec2025.head())"
+    "df = df[df['view_year'] != 2026]"
    ]
   },
   {
@@ -256,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "00ea85cf",
    "metadata": {},
    "outputs": [
@@ -264,13 +231,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_22580\\1607376585.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_22580\\2335214191.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df.groupby(['Film_Name', 'view_year', 'view_month'])['Number_of_Views']\n"
      ]
     }
    ],
    "source": [
-    "# 1. Monthly Views (from Viewing_Month)\n",
+    "# 1. Monthly Views\n",
     "monthly_views = (\n",
     "    df.groupby(['Film_Name', 'view_year', 'view_month'])['Number_of_Views']\n",
     "    .sum()\n",
@@ -281,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "c2b4faed",
    "metadata": {},
    "outputs": [
@@ -306,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "78a6d981",
    "metadata": {},
    "outputs": [
@@ -331,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "e3fa1495",
    "metadata": {},
    "outputs": [
@@ -364,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "effa2b45",
    "metadata": {},
    "outputs": [],
@@ -375,7 +342,83 @@
     "\n",
     "df = df.merge(total_views, on='Film_Name', how='left')\n",
     "\n",
-    "df = df.merge(avg_rating_category, on='Category', how='left')\n"
+    "df = df.merge(avg_rating_category, on='Category', how='left')\n",
+    "df = df.merge(avg_rating_lang, on='Language', how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46c0106",
+   "metadata": {},
+   "source": [
+    " FILTER DECEMBER 2025 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "56b20b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dec2025 = df[(df['view_year'] == 2025) & (df['view_month'] == 12)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a94d2e51",
+   "metadata": {},
+   "source": [
+    "FINAL CLEANUP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3b6d32d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "FINAL PROCESSED DATASET:\n",
+      "         Film_Name Release_Date     Category Language  Viewer_Rate  \\\n",
+      "0  Chennai Express   2021-09-12      Romance    Hindi          4.5   \n",
+      "1   Mountain Trail   2020-04-27       Comedy  English          3.5   \n",
+      "2     Eternal Hope   2020-07-04      Romance  English          4.6   \n",
+      "3  Seoul Heartbeat   2020-04-17       Comedy  English          4.1   \n",
+      "4      Shadow Pact   2022-02-24  Documentary  English          4.3   \n",
+      "\n",
+      "   Number_of_Views Viewing_Month  Release_Year  Release_Month  Viewing_Year  \\\n",
+      "0            36395    2022-09-01          2021              9          2022   \n",
+      "1            93162    2021-07-01          2020              4          2021   \n",
+      "2            98663    2021-04-01          2020              7          2021   \n",
+      "3           112635    2020-07-01          2020              4          2020   \n",
+      "4            29496    2023-05-01          2022              2          2023   \n",
+      "\n",
+      "   Viewing_Month_Num  Monthly_Views  Total_Views  Avg_Rating_Category  \\\n",
+      "0                  9          36395      1530617             4.253846   \n",
+      "1                  7          93162      1464802             4.265591   \n",
+      "2                  4         209160      1295249             4.253846   \n",
+      "3                  7         112635      1957158             4.265591   \n",
+      "4                  5          29496       631540             4.192188   \n",
+      "\n",
+      "   Avg_Rating_Language  \n",
+      "0             4.113235  \n",
+      "1             4.214894  \n",
+      "2             4.214894  \n",
+      "3             4.214894  \n",
+      "4             4.214894  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.drop(columns=['view_year', 'view_month'])\n",
+    "\n",
+    "print(\"\\nFINAL PROCESSED DATASET:\")\n",
+    "print(df.head())\n"
    ]
   },
   {
@@ -388,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "id": "ded52592",
    "metadata": {},
    "outputs": [
