--- a/BIG_DATA/notebook/Janudi/preprocessing.ipynb
+++ b/BIG_DATA/notebook/Janudi/preprocessing.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "ded52592",
    "metadata": {},
    "outputs": [
@@ -449,10 +449,10 @@
    ],
    "source": [
     "df.to_csv(\"../../data/Processed_Film_Dataset.csv\", index=False)\n",
-    "monthly_views.to_csv(\"../..//data/Feature_Monthly_Views.csv\", index=False)\n",
+    "monthly_views.to_csv(\"../../data/Feature_Monthly_Views.csv\", index=False)\n",
     "total_views.to_csv(\"../../data/Feature_Total_Views.csv\", index=False)\n",
     "\n",
-    "print(\"\\n✔ Files successfully generated:\")\n",
+    "print(\"\\n Files successfully generated:\")\n",
     "print(\"Processed_Film_Dataset.csv\")\n",
     "print(\"Feature_Monthly_Views.csv\")\n",
     "print(\"Feature_Total_Views.csv\")"
