add view predictor

--- a/BIG_DATA/notebook/MudhithK/train.ipynb
+++ b/BIG_DATA/notebook/MudhithK/train.ipynb
@@ -1707,8 +1707,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "55b324b9-1bb0-4784-b035-5b9b368c7a86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['predict.pkl']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(pipeline, 'predict.pkl')  # pipeline = trained model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea50075-5fe1-4180-87b1-c667a542e226",
    "metadata": {},
    "outputs": [],
    "source": []
